--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,39 @@
-fastapi[all]==0.116.1
-uvicorn==0.35.0
-python-dotenv==1.1.1
-sqlalchemy==2.0.42
-asyncpg==0.30.0
-psycopg2-binary==2.9.10
-faiss-cpu==1.11.0
-numpy==2.3.2
-requests==2.32.4
-openai==1.99.1
+fastapi[all]>=0.116.0
+uvicorn>=0.35.0
+python-dotenv>=1.1.0
+sqlalchemy>=2.0.0
+asyncpg>=0.30.0
+psycopg2-binary>=2.9.0
+faiss-cpu>=1.11.0
+numpy>=2.3.0
+requests>=2.32.0
+openai>=1.99.0
 
 # PDF Processing
-pymupdf==1.26.3
-pdf2image==1.17.0
-PyPDF2==3.0.1
-easyocr==1.7.2
+pymupdf>=1.26.0
+pdf2image>=1.17.0
+PyPDF2>=3.0.0
+easyocr>=1.7.0
 
 # OCR and Image Processing
-opencv-python==4.10.0.84
-Pillow==11.1.0
+opencv-python>=4.10.0
+Pillow>=11.1.0
 
 # Text Processing
-langchain==0.3.27
-langchain-core==0.3.72
-langchain-text-splitters==0.3.9
-sentence-transformers==5.0.0
-rank-bm25==0.2.2
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-text-splitters>=0.3.0
+langchain-community>=0.3.0
+sentence-transformers>=5.0.0
+rank-bm25>=0.2.0
 
 # Language Detection
-langdetect==1.0.9
+langdetect>=1.0.0
 
 # Browser Automation (for error detection)
-selenium==4.34.2
-chromedriver-autoinstaller==0.6.4
+selenium>=4.34.0
+chromedriver-autoinstaller>=0.6.0
 
 # Additional Dependencies
-pydantic==2.11.7
-typing-extensions==4.14.1 
+pydantic>=2.11.0
+typing-extensions>=4.14.0 
