--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-text-splitters>=0.3.0
 langchain-community>=0.3.0
+langchain-huggingface>=0.0.3
 sentence-transformers>=5.0.0
 rank-bm25>=0.2.0
 
